# coding-night

./: .env  Makefile  compose.yaml  hello.txt
backend/: .env  Cargo.toml  Dockerfile  Makefile  flake.nix
backend/migrations/2019-12-27-225611_create_todos/: up.sql
backend/migrations/2023-12-01-154257_coding/: up.sql
backend/migrations/2023-12-01-175837_codingg/: up.sql
backend/migrations/2023-12-01-180311_coding/: up.sql
backend/src/: context.rs  data.rs  db.rs  endpoints.rs  graphql.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
db/: Dockerfile
frontend/: Dockerfile  Makefile  flake.nix  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  Navbar.tsx  main.tsx
frontend/src/components/: LogIn.tsx
frontend/src/pages/: CreatePost.tsx  LogIn.tsx  Main.tsx  PostPage.tsx  Profile.tsx  SignUp.tsx
frontend/src/pages/components/: Navbar.tsx  Post.tsx  PostsDisplay.tsx
